feat: small fixes

--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="up">Up</string>
     <string name="transition_image_view">imageTransition</string>
+    <string name="content_description_article_detail">Image depicting the article</string>
     <string name="network_error">Not connected to Internet !!</string>
 
 </resources>
