--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,8 @@
 = XYZ Reader Starter Code
 
-This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+In this project, task is to redesign an app to follow the Material Design guidelines and translate a set of static design mocks to a living and breathing app.
+XYZ Reader: A mock RSS feed reader featuring banner photos and headlines.
+
+Screenshots
+
+<img src="Screenshot_1513854055.png" height="400px"/> &nbsp;&nbsp;<img src="Screenshot_1513854098.png" height="400px"/>
